--- a/cssVerifica.css
+++ b/cssVerifica.css
@@ -1,6 +1,7 @@
 h1{color:MediumSeaGreen;text-align:center;text-decoration:underline;}
 .verde{margin: 10px;padding:25px;border:3px solid green; border-radius:20 px;background-color:#beedc0; }
 .blu{border:3px solid SkyBlue;padding: 20px;margin: 15px; border-radius:20 px;background-color:Lavender;}
+Img{align=center;}
 #giallo{border:3px solid Khaki;padding:5px;margin:5px; border-radius:20 px;}
 caption{text-align:center;color:Tan;font-style:italic;background-color:Moccasin;}
 table { width:100%; border:1px solid grey;background-color:Moccasin}
